--- a/hola-mundo/package.json
+++ b/hola-mundo/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "hello-world",
+  "name": "hola-mundo",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "deploy": "sh deploy.sh"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^3.6.5",
